{
  "version": 4,
  "terraform_version": "1.10.2",
  "serial": 54,
  "lineage": "2920e5c8-ab4d-599a-a533-8fe85ed15fb0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dropbox_web_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06fb1a4ce703dd6bd",
            "arn": "arn:aws:ec2:eu-central-1:849004679821:instance/i-05e975f046572b1da",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05e975f046572b1da",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "dropbox_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05198496fb98e5b08",
            "private_dns": "ip-10-10-1-72.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.72",
            "public_ip": "18.196.144.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e73e260ca25f977d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-011cde95e3f0414b6",
            "tags": {
              "Name": "Dropbox_WebServer"
            },
            "tags_all": {
              "Name": "Dropbox_WebServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a6ef52ae9b85aec5"
            ]
          },
          "dependencies": [
            "aws_security_group.dropbox_web_sg",
            "aws_subnet.dropbox_public_subnet",
            "aws_vpc.dropbox_web_vpc",
            "data.aws_ami.latest_ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dropbox_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:849004679821:internet-gateway/igw-0233b4249f18449fa",
            "id": "igw-0233b4249f18449fa",
            "owner_id": "849004679821",
            "tags": {
              "Name": "Dropbox_Internet_Gateway"
            },
            "tags_all": {
              "Name": "Dropbox_Internet_Gateway"
            },
            "vpc_id": "vpc-00242db3fc1ba79bb"
          },
          "dependencies": [
            "aws_vpc.dropbox_web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "web_to_db_peering_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.20.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d0e8415974deeba1662290444",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d0e8415974deeba1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0cf68d43de88a51fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dropbox_igw",
            "aws_route_table.dropbox_public_rt",
            "aws_vpc.dropbox_db_vpc",
            "aws_vpc.dropbox_web_vpc",
            "aws_vpc_peering_connection.dropbox_vpc_peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dropbox_db_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:849004679821:route-table/rtb-033d96537aaea6b64",
            "id": "rtb-033d96537aaea6b64",
            "owner_id": "849004679821",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.10.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0cf68d43de88a51fa"
              }
            ],
            "tags": {
              "Name": "Dropbox_DB_Private_Route_Table"
            },
            "tags_all": {
              "Name": "Dropbox_DB_Private_Route_Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2ce54beff431614"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dropbox_db_vpc",
            "aws_vpc.dropbox_web_vpc",
            "aws_vpc_peering_connection.dropbox_vpc_peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dropbox_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:849004679821:route-table/rtb-0d0e8415974deeba1",
            "id": "rtb-0d0e8415974deeba1",
            "owner_id": "849004679821",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0233b4249f18449fa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Dropbox_Public_Route_Table"
            },
            "tags_all": {
              "Name": "Dropbox_Public_Route_Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00242db3fc1ba79bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dropbox_igw",
            "aws_vpc.dropbox_web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_private_rt_assoc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f001b9a2c32b4e84",
            "route_table_id": "rtb-033d96537aaea6b64",
            "subnet_id": "subnet-0cc0a5c619bd730fe"
          },
          "dependencies": [
            "aws_route_table.dropbox_db_private_rt",
            "aws_subnet.dropbox_db_private_subnet_a",
            "aws_vpc.dropbox_db_vpc",
            "aws_vpc.dropbox_web_vpc",
            "aws_vpc_peering_connection.dropbox_vpc_peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_private_rt_assoc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8ad24c84b8680e0",
            "route_table_id": "rtb-033d96537aaea6b64",
            "subnet_id": "subnet-0db39e0b988b22bb7"
          },
          "dependencies": [
            "aws_route_table.dropbox_db_private_rt",
            "aws_subnet.dropbox_db_private_subnet_b",
            "aws_vpc.dropbox_db_vpc",
            "aws_vpc.dropbox_web_vpc",
            "aws_vpc_peering_connection.dropbox_vpc_peering"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dropbox_public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06225f940cad9bf6a",
            "route_table_id": "rtb-0d0e8415974deeba1",
            "subnet_id": "subnet-011cde95e3f0414b6"
          },
          "dependencies": [
            "aws_internet_gateway.dropbox_igw",
            "aws_route_table.dropbox_public_rt",
            "aws_subnet.dropbox_public_subnet",
            "aws_vpc.dropbox_web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dropbox_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:849004679821:security-group/sg-053af2329c9da1a75",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-053af2329c9da1a75",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20241216094322530400000001",
            "name_prefix": "terraform-",
            "owner_id": "849004679821",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Dropbox_DB_Security_Group"
            },
            "tags_all": {
              "Name": "Dropbox_DB_Security_Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d2ce54beff431614"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dropbox_db_vpc",
            "aws_vpc.dropbox_web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dropbox_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:849004679821:security-group/sg-0a6ef52ae9b85aec5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6ef52ae9b85aec5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241216094322533700000002",
            "name_prefix": "terraform-",
            "owner_id": "849004679821",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Dropbox_Web_Security_Group"
            },
            "tags_all": {
              "Name": "Dropbox_Web_Security_Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-00242db3fc1ba79bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dropbox_web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dropbox_db_private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:849004679821:subnet/subnet-0cc0a5c619bd730fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc0a5c619bd730fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "849004679821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dropbox_DB_Private_Subnet_A"
            },
            "tags_all": {
              "Name": "Dropbox_DB_Private_Subnet_A"
            },
            "vpc_id": "vpc-0d2ce54beff431614"
          },
          "dependencies": [
            "aws_vpc.dropbox_db_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dropbox_db_private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:849004679821:subnet/subnet-0db39e0b988b22bb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db39e0b988b22bb7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "849004679821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dropbox_DB_Private_Subnet_B"
            },
            "tags_all": {
              "Name": "Dropbox_DB_Private_Subnet_B"
            },
            "vpc_id": "vpc-0d2ce54beff431614"
          },
          "dependencies": [
            "aws_vpc.dropbox_db_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dropbox_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:849004679821:subnet/subnet-011cde95e3f0414b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011cde95e3f0414b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "849004679821",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Dropbox_Public_Subnet"
            },
            "tags_all": {
              "Name": "Dropbox_Public_Subnet"
            },
            "vpc_id": "vpc-00242db3fc1ba79bb"
          },
          "dependencies": [
            "aws_vpc.dropbox_web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dropbox_db_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:849004679821:vpc/vpc-0d2ce54beff431614",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0803d114f7aa393be",
            "default_route_table_id": "rtb-07f6ed882852b159f",
            "default_security_group_id": "sg-0df8ef58910dc5abb",
            "dhcp_options_id": "dopt-07b7fee563dda3fd4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d2ce54beff431614",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07f6ed882852b159f",
            "owner_id": "849004679821",
            "tags": {
              "Name": "Dropbox_DB_VPC"
            },
            "tags_all": {
              "Name": "Dropbox_DB_VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dropbox_web_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:849004679821:vpc/vpc-00242db3fc1ba79bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0bb188c55b351c24e",
            "default_route_table_id": "rtb-0a52bcb6a1c2a3ac8",
            "default_security_group_id": "sg-09c7286d368850bee",
            "dhcp_options_id": "dopt-07b7fee563dda3fd4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00242db3fc1ba79bb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a52bcb6a1c2a3ac8",
            "owner_id": "849004679821",
            "tags": {
              "Name": "Dropbox_Web_VPC"
            },
            "tags_all": {
              "Name": "Dropbox_Web_VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "dropbox_vpc_peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0cf68d43de88a51fa",
            "peer_owner_id": "849004679821",
            "peer_region": "eu-central-1",
            "peer_vpc_id": "vpc-0d2ce54beff431614",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "vpc_id": "vpc-00242db3fc1ba79bb"
          },
          "dependencies": [
            "aws_vpc.dropbox_db_vpc",
            "aws_vpc.dropbox_web_vpc"
          ]
        }
      ]
    }
  ]
}